# twogether

./: .gitignore  README.md  bun.lockb  dune  dune-project  hitched.opam  mix.exs  package.json
assets/: tailwind.config.js
client/: .gitignore  .ocamlformat  README.md  bun.lockb  client.opam  dune  dune-project  index.css  index.html  package.json  rescript.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
client/src/: App.mlx  App.re  App.res  App.res.mjs  Dashboard.res  Env.res  Env.resi  FourOhFour.res  HomePage.res  LoginPage.res  Main.res  Main.res.mjs  Main.resi  ReactApp.mlx  SignupPage.res  app.mlx  dune  index.css  main.mlx
client/src/api/: dune  guests.ml  guests.mli
client/src/bindings/: Clerk.res  Clerk.res.mjs  ClerkTypes.res  ClerkTypes.res.mjs  Dialog.res  DropdownMenu.res  HeadlessUi.res  Radix.res  Radix.res.mjs  RadixTypes.res  Tooltip.res  dune  headless_ui.ml  radix.ml
client/src/components/: Icon.res  Nav.res  Nav.resi  UserDropdown.res  dune  nav.mlx  user_dropdown.mlx
client/src/components/guests/: DeleteGuestDialog.res  DeleteGuestDialog.resi  EditGuestDialog.res  EmptyState.res  GuestDialog.res  Guests.res  Guests.resi  GuestsList.res  GuestsList.resi  GuestsTable.res  delete_guest_dialog.mlx  dune  edit_guest_dialog.mli  edit_guest_dialog.mlx  empty_state.mlx  guest_dialog.mli  guest_dialog.mlx  guest_list.mli  guest_list.mlx
client/src/components/shared/: Link.res  Link.resi  dune  link.mli  link.mlx
client/src/components/ui/: Badge.res  Badge.resi  ButtonTooltip.res  ButtonTooltip.resi  Icon.res  Icon.resi  Ui.res  Ui.resi  badge.mli  badge.mlx  button_tooltip.mli  button_tooltip.mlx  dune
client/src/context/: AuthContext.res  AuthContext.resi  auth.mlx  dune
client/src/ctx/: auth.mlx  dune  toast.mlx
client/src/models/: Guest.res  Guest.resi  Models.res  Models.resi  User.res
client/src/pages/: Dashboard.res  Guests.res  Home.res  Login.res  Signup.res  dashboard.mlx  dune  guests.mlx  login.mlx
client/src/types/: Guest.res
client/src/utils/: FormatDateString.res  FormatDateString.resi  Utils.res  Utils.resi  date_fns.ml  date_fns.mli  dune  fetcher.ml  fetcher.mli
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: hitched.ex  hitched_web.ex
lib/hitched/: accounts.ex  application.ex  mailer.ex  repo.ex
lib/hitched/accounts/: user.ex  user_notifier.ex  user_token.ex
lib/hitched_web/: auth.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/hitched_web/components/: core_components.ex  layouts.ex
lib/hitched_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  user_session_controller.ex
lib/hitched_web/live/: confirmation_instructions_live.ex  confirmation_live.ex  forgot_password_live.ex  login_live.ex  registration_live.ex  reset_password_live.ex  settings_live.ex  user_confirmation_instructions_live.ex  user_confirmation_live.ex  user_forgot_password_live.ex  user_login_live.ex  user_registration_live.ex  user_reset_password_live.ex  user_settings_live.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20240511151754_create_users_auth_tables.exs
server/: .gitignore  .ocamlformat  README.md  dune-project  server.opam
server/lib/models/: dune  guest.ml
server/lib/routes/: auth.ml  dune
server/lib/routes/auth/: auth.ml  create_user.ml  dune  login.ml  logout.ml  signup.ml  validate.ml  verify_user.ml
server/lib/routes/guests/: add_guest.ml  delete_guest.ml  dune  edit_guest.ml  get_guest.ml  get_guests.ml  guests.ml
src/: App.re
test/: test_helper.exs
test/hitched/: accounts_test.exs
test/hitched_web/: auth_test.exs  user_auth_test.exs
test/hitched_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs  (+1 more)
test/support/: conn_case.ex  data_case.ex
(+18 files in other folders)
