(lang dune 3.16)

(using melange 0.1)

(name client)

(generate_opam_files true)

(source
 (github jakequinter/hitched))

(authors "Jake Quinter")

(maintainers "Jake Quinter")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name client)
 (synopsis "Client-side code for Hitched, a wedding planning app.")
 (allow_empty)
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (preprocess
   (run mlx-pp %{input-file}))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
