(lang dune 3.16)

(using melange 0.1)

(name client)

(generate_opam_files true)

(source
 (github jakequinter/twogether))

(authors "Jake Quinter")

(maintainers "Jake Quinter")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name client)
 (synopsis "Client-side code for twogether, a wedding planning app.")
 (allow_empty)
 (depends ocaml 
          dune
          melange
          reason-react-ppx
          mlx
          melange-json
          melange-fetch)
 (tags
  (topics "to describe" your project)))

(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (preprocess
   (run mlx-pp %{input-file}))))

