(lang dune 3.16)

(name server)

(generate_opam_files true)

(source
 (github jakequinter/hitched))

(authors "Jake Quinter")

(maintainers "Jake Quinter")

(license LICENSE)

(documentation https://github.com/jakequinter/hitched/server)

(package
 (name server)
 (synopsis "Hitched server")
 (description "Server-side code for Hitched, a wedding planning app.")
 (depends 
   ocaml 
   dune 
   caqti
   caqti-lwt
   caqti-driver-postgresql
   dotenv
   dream
   ppx_deriving_yojson
   ppx_rapper
   ppx_rapper_lwt
   ppx_yojson_conv
   safepass)
 (tags
  (ocaml, melange)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
