(library
 (name pages)
 (modes melange)
 (libraries reason-react melange.belt)
 (preprocess (pps melange.ppx reason-react-ppx))
 (modules login))

(melange.emit
 (target output)
 (alias pages)
 (libraries reason-react melange.belt pages)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems es6)
 (modules))
